<Solved the cards on index.html overlapping by removing redundant styles from the Bootstrap HTML>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,15 @@ h3 {
     color: var(--text-color);
 }
 
+#navbar * {
+    background-color: var(--secondary-color);
+    color: var(--background-color)
+}
+
+#card-main {
+    padding: 1rem;
+}
+
 /* Footer */
 
 footer {
